@@ -4,7 +4,6 @@ import static org.junit.jupiter.api.Assertions.*;
 
 import java.time.Year;
 import java.util.List;
-import java.util.UUID;
 
 public class LibraryManagementSystemTest {
     private LibraryManagementSystem library;
@@ -20,69 +19,102 @@ public class LibraryManagementSystemTest {
         DVD dvd1 = new DVD("Inception",  148, "Christopher Nolan", Year.parse("2010"));
         DVD dvd2 = new DVD("Memento", 109, "Christopher Nolan", Year.parse("2000"));
 
-        LibraryManagementSystem library = new LibraryManagementSystem();
-        library.addBorrowableItem(booksGalaxy[0]);
-        library.addBorrowableItem(book2);
-        library.addBorrowableItem(dvd1);
-        library.addBorrowableItem(dvd2);
+        library = new LibraryManagementSystem();
+        library.addItem(book1);
+        library.addItem(book2);
+        library.addItem(dvd1);
+        library.addItem(dvd2);
     }
 
     @Test
-    public void testSearchByTitle() {
-        List<Item> items = library.search("The Dune");
+    public void testSearchByTitleShouldFindExistingBook() {
+        //When
+        List<Item> items = library.search("Dune");
+
+        //Then
         assertEquals(1, items.size());
-        assertEquals("Dune", items.get(0).getTitle());
-
-        List<Item> bookList = library.search("Gatsby");
-        assertTrue(bookList.isEmpty())
+        assertEquals("Dune", items.getFirst().getTitle());
     }
 
     @Test
-    public void testSearchByType() {
-        List<Item> books = library.search("Book");
-        List<Item> dvds = library.search("DVD");
+    public void testSearchByTitleShouldNotFindNonExistingBook() {
+        //When
+        List<Item> bookList = library.search("Gatsby");
 
-        assertEquals("book", books.get(0).getItemType());
-        assertEquals("DVDs", dvds.get(0).getItemType());
+        //Then
+        assertTrue(bookList.isEmpty());
+    }
+
+    @Test
+    public void testSearchByTypeShouldFindExistingBook() {
+        //When
+        List<Item> books = library.search("Book");
+
+        //Then
+        assertEquals("Book", books.getFirst().getItemType());
+    }
+
+    @Test
+    public void testSearchByTypeShouldNotFindNonExistingBook() {
+        //When
+        List<Item> bookList = library.search("BoardGame");
+
+        //Then
+        assertTrue(bookList.isEmpty());
     }
 
     @Test
     public void testBorrowItem() {
-        Item book = library.search("Dune").get(0);
+        //Given
+        Item book = library.search("Dune").getFirst();
+
+        //When
         library.lendItem(user1, book);
+
+        //Then
         assertTrue(book.isBorrowed());
-        // todo assert user hats ausgeliehen
     }
 
     @Test
     public void testReturnItemAndNotifyWaitingList() {
-        Item book = library.search("Dune").get(0);
+        //Given
+        Item book = library.search("Dune").getFirst();
+
+        //When
         library.lendItem(user1, book);
-        library.lendItem(user2, book); //waitlist
-        library.returnItem(book);
         library.lendItem(user2, book);
 
-        // When returned, User2 should be notified and borrow it automatically
+        // Then
         assertTrue(book.isBorrowed());
         assertTrue(library.getBorrowedItems().containsKey(book));
-        assertTrue(library.getBorrowingUsers().containsKey(user2));
-        assertFalse(library.getBorrowingUsers().containsKey(user1));
+        assertTrue(library.getBorrowingUsers().containsKey(user1));
+        assertFalse(library.getBorrowingUsers().containsKey(user2));
+        assertEquals(1, book.getObservers().size());
+        assertSame(book.getNextObserver(), user2);
     }
 
     @Test
     public void testBorrowNonExistentItem() {
-        Book book3 = new Book(UUID.randomUUID(), "Sapiens: A Brief History of Humankind", "Yuval Noah Harari", Year.parse("2014"));
+        //Given
+        Book book3 = new Book("Sapiens: A Brief History of Humankind", "Yuval Noah Harari", Year.parse("2014"));
+
+        //When
         library.lendItem(user1, book3);
-        boolean borrowed = library.getBorrowedItems().containsKey(book3);
+
+        //Then
         assertFalse(book3.isBorrowed());
-        assertFalse(borrowed);
+        assertFalse(library.getBorrowedItems().containsKey(book3));
     }
 
     @Test
     public void testReturnNonBorrowedItem() {
-        Item book = library.search("Dune").get(0);
+        //Given
+        Item book = library.search("Dune").getFirst();
+
+        //When
         library.returnItem(book); // Nothing should break
-        book = library.search("Dune").get(0);
+
+        //Then
         assertFalse(book.isBorrowed());
     }
 }
